mobile spacing corrections

--- a/css/style.css
+++ b/css/style.css
@@ -298,6 +298,7 @@ main {
           margin-right: 1.3rem;
      }
      .about {
+          margin-top: 3rem;
           padding-bottom: 2.5rem;
      }
      h1, .side span{
